--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: 12
       - run: |
+          apt install -y fonts-noto
+      - run: |
           npm i
           npm run prebuild
           npm run build
