--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: 12
       - run: |
-          apt install -y fonts-noto
+          sudo apt-get install -y fonts-noto
       - run: |
           npm i
           npm run prebuild
