--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -25,8 +25,9 @@ jobs:
       - run: |
           npm run configure
       - run: |
+          git config pull.ff only
+          git switch main
+          git pull
           git add .
           git commit -m "generate PDF" -a
-          git config pull.ff only
-          git pull
           git push origin main
