--- a/.github/workflows/generate-pdf.yml
+++ b/.github/workflows/generate-pdf.yml
@@ -26,7 +26,7 @@ jobs:
           npm run configure
       - run: |
           git config pull.ff only
-          git switch main
+          git switch origin/main
           git pull
           git add .
           git commit -m "generate PDF" -a
